Rename health api route
