# routes/api.php
@@ -11,7 +11,7 @@ use App\Http\Controllers\RawgDomainController;
 use Illuminate\Support\Facades\Route;
 use Spatie\Health\Http\Controllers\HealthCheckJsonResultsController;
 
-Route::get('/health', HealthCheckJsonResultsController::class);
+Route::get('/up', HealthCheckJsonResultsController::class);
 
 Route::permanentRedirect('/docs', '/swagger/index.html');
 
